2011-09-15  Janus Weil  <janus@gcc.gnu.org>

PR fortran/50401
	* resolve.c (resolve_transfer): Check if component 'ref' is defined.

	PR fortran/50403
	* symbol.c (gfc_use_derived): Check if argument 'sym' is defined.


2011-09-15  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/50401
	PR fortran/50403
	* gfortran.dg/function_types_3.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@178889 138bc75d-0d04-0410-961f-82ee72b054a4